# homework1

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
app/: database.py  main.py
app/docs/database/: er_diagram.md  schema.sql
app/routers/: posts.py  users.py
app/templates/: home.html
data/: posts.json  users.json
